[build-systems]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "serket"
dynamic = ["version"]
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
description = "Functional neural network library in JAX"
authors = [{ name = "Mahmoud Asem", email = "mahmoudasem00@gmail.com" }]
keywords = [
  "jax",
  "neural-networks",
  "functional-programming",
  "machine-learning",
]
dependencies = ["sepes>=0.10.0", "kernex>=0.2.0"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

readme = "README.md"

[tool.setuptools.dynamic]
version = { attr = "serket.__version__" }

[tool.setuptools.packages.find]
include = ["serket", "serket.*"]

[project.urls]
Source = "https://github.com/ASEM000/Serket"


[tool.ruff]
select = ["F", "E", "I"]
line-length = 120
ignore = [
  "E731", # do not assign a lambda expression, use a def
]
